--- a/Resume/style.css
+++ b/Resume/style.css
@@ -53,12 +53,12 @@ padding-bottom:0px;
 padding-right:0px;
 padding-left:0px;
 display:inline;
-/*Job titles*/
+/*Job organization*/
 .organization{
     font-weight:600;
     font-size:1.5em;
 }
-/*Job organizations*/
+/*Job title*/
 .jobtitle{
     font-weight:400;
     font-size:1.25em;
