--- a/Resume/style.css
+++ b/Resume/style.css
@@ -6,6 +6,7 @@ color: #444;
 font-weight:400;
 font-size: 1em;
 }
+/*around the entire document*/
 #container{
 width:100%;
 max-width:1200px;
@@ -37,43 +38,6 @@ padding-bottom:50px;
     margin-right:0px;
     margin-left:0px;
 }
-/*paragraph*/
-margin-top:10px;
-margin-bottom:10px;
-margin-right:0px;
-margin-left:0px;
-/*contact info*/
-text-align:center;
-margin-top:0px;
-margin-bottom:0px;
-margin-right:0px;
-margin-left:0px;
-padding-top:0px
-padding-bottom:0px;
-padding-right:0px;
-padding-left:0px;
-display:inline;
-/*Job organization*/
-.organization{
-    font-weight:600;
-    font-size:1.5em;
-}
-/*Job title*/
-.jobtitle{
-    font-weight:400;
-    font-size:1.25em;
-}
-/*Job date*/
-.date{
-    font-weight:400;
-    font-size:1em;
-    font-style:italic;
-    margin-top:2px;
-    margin-bottom:0px;
-    margin-bottom:0px;
-    margin-right:0px;
-    margin-left:0px;
-}
 /*Headings for main skills*/
 .sectionheader{
     font-size:1.5em;
@@ -88,15 +52,61 @@ display:inline;
     width:70%;
     min-width:300px;
 }
+/*paragraph*/
+.description{
+    margin-top:10px;
+    margin-bottom:10px;
+    margin-right:0px;
+    margin-left:0px;
+}
+
+/*contact info*/
+.menu{
+    text-align:center;
+    margin-top:0px;
+    margin-bottom:0px;
+    margin-right:0px;
+    margin-left:0px;
+    padding-top:0px
+    padding-bottom:0px;
+    padding-right:0px;
+    padding-left:0px;
+    display:inline;
+}
+
+/*Job title*/
+.jobtitle{
+    font-weight:600;
+    font-size:1.5em;
+}
+/*Job organization*/
+.organization{
+    font-weight:400;
+    font-size:1.25em;
+}
+/*Job date*/
+.date{
+    font-weight:400;
+    font-size:1em;
+    font-style:italic;
+    margin-top:2px;
+    margin-bottom:0px;
+    margin-bottom:0px;
+    margin-right:0px;
+    margin-left:0px;
+}
+
 ul{
     font-size:1em;
 }
+/*list under skills*/
 #do{
    margin-top:5px;
    margin-bottom:0px;
    margin-right:0px;
    margin-left:0px;
 }
+/*list under education*/
 #degrees{
     margin-top:5px;
     margin-bottom:0px;
