--- a/Resume/style.css
+++ b/Resume/style.css
@@ -21,7 +21,7 @@ padding-bottom:50px;
     color:#33485e;
     text-align:center;
     font-weight:400;
-    border-bottom:1px solid:#33485e;
+    border-bottom:1px solid #33485e;
     width:60%;
     min-width:300px;
     margin:0 auto;
