--- a/Resume/style.css
+++ b/Resume/style.css
@@ -71,7 +71,10 @@ padding-bottom:50px;
     padding-bottom:0px;
     padding-right:0px;
     padding-left:0px;
-    display:inline;
+}
+.menu li{
+list-style-type:none;
+display:inline;
 }
 
 /*Job title*/
