--- a/jalil-layout/style.css
+++ b/jalil-layout/style.css
@@ -7,14 +7,17 @@
 }
 h1{
     font-family:Helvetica, sans-serif;
-    font-size:30px;
+    font-size:35px;
     font-weight:400 px;
     text-align:center;
+    
 }
 #byline{
     font-family: Helvetica, sans-serif;
     font-size: 14px;
     font-style: italic;
+    text-align:left;
+    margin: 0 auto;
 }
 p{
     font-family: Georgia, serif;
@@ -40,4 +43,20 @@ img{
     color:gray;
     font-size: 12px;
     width:60%;
+}
+#credit{
+    font-family:Georgia, serif;
+    color:gray;
+    font-size: 9px;
+    
+}
+.menu{
+    font-family: Georgia,serif;
+    color:blue;
+    font-size: 13px;
+}
+h2{
+    font-family:Georgia,serif;
+    color:black;
+    font-size:15px;
 }
