--- a/midterm/style.css
+++ b/midterm/style.css
@@ -18,6 +18,10 @@ h2{
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size:20px;
 }
+h3{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size:20px;
+}
 p{
     font-family: helvetica, arial, sans-serif;
     font-size:14px;
