--- a/taylor-swift/style.css
+++ b/taylor-swift/style.css
@@ -1,5 +1,20 @@
 .container{
 font-family:Georgia, 'Times New Roman', Times, serif;
+width:60%;
+}
+p{
+  font-size:18px;
+}
+.byline{
+  font-size:14px;
+  color:black;
+ font-style:bold;
+  width: 330px;
+  height: 40px;
+  padding-top: 5px;
+  padding-left:5px;
+  padding-bottom:5px;
+  border: 3px solid #75bfec;
 }
 h1{
   text-align:center;
@@ -8,14 +23,6 @@ img{
   width:100%;
   height:50%;
 }
-.overlay{
-  position:absolute;
-  top:10%;
-  width:100%;
-  background:#ffd1eb;
-  opacity:0.7;
- 
-}
 .hero-container{
   position:relative;
   text-align:center;
@@ -23,25 +30,7 @@ img{
   opacity:2;
   font-size:1em;
 }
-.hero-image{
-  width:100%;
-}
 
-.hero-hed{
-  font-family: 'Playfair Display', serif;
-  font-size:6em;
-  color:#fff;
-  margin:0 auto;
-  padding-bottom:10px;
-
-}
-.hero-sub{
-  font-family:'Barlow', sans-serif;
-  font-weight:800;
-  font-size:0.25em;
-  color:white;
-  background:#ff2400;
-}
 
 .quote{
   font-size:2em;
@@ -51,21 +40,43 @@ img{
   text-align:center;
 }
 .marks{
-  color:#ff2400;
-  font-family:Georgia,'Times New Roman',serif;
-  font-weight:800;
-  font-size:2em;
-  text-align:center;
-  padding:15px 0 15px 0;
-  border-top:1 px solid black;
-  margin: 0 auto;
+  width:100%;
 
 }
 .quote-person{
   font-family:'Bebas Neue', sans-serif;
-  color:#ff2400;
+  color:#75bfec;
   font-size:1.5em;
   font-weight:800;
   padding:15px 0 15px 0;
   text-align:center;
 }
+.style{
+  color:#75bfec;
+  font-size:3em; 
+}
+.bi {
+  margin:0 auto;
+  text-align:center;
+}
+.caption{
+font-family:'Bebas Neue', sans-serif;
+}
+.nav-logo{
+  color:#fff;
+  margin:0 auto;
+  font-weight:700;
+  text-transform:uppercase;
+  font-family:'Bebas Neue', sans-serif;
+}
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) { ... }
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) { ... }
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) { ... }
