--- a/taylor-swift/style.css
+++ b/taylor-swift/style.css
@@ -68,6 +68,37 @@ font-family:'Bebas Neue', sans-serif;
   text-transform:uppercase;
   font-family:'Bebas Neue', sans-serif;
 }
+h3{
+  color:black;
+  text-transform:uppercase;
+  font-size:25px;
+  font-weight:700px;
+  width: 170px;
+  height: 40px;
+  padding-top: 5px;
+  padding-left:5px;
+  padding-bottom:5px;
+  border: 3px solid #75bfec;
+}
+/* unvisited link */
+a:link {
+  color: #75bfec;
+}
+
+/* visited link */
+a:visited {
+  color: red;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+}
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
